test/tests/stages/18_structures/invalid_types/scalar_required/cast_struct_to_scalar.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  struct
  identifier(s)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  struct
  identifier(s)
  identifier(x)
  =
  {
  const int(1)
  }
  ;
  int
  identifier(y)
  =
  (
  int
  )
  identifier(x)
  ;
  return
  identifier(y)
  ;
  }
